// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input.svelte > should render "boolean" 1`] = `
<body>
  <div>
    <checkbox
      aria-checked="unknown"
      aria-disabled="false"
      class="flex items-center leading-loose cursor-pointer select-none checkbox "
      role="checkbox"
      tabindex="0"
    >
      <input
        hidden=""
        name="foo"
        type="checkbox"
      />
       
      <icon
        class="checkbox-unknown"
      />
    </checkbox>
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "checkbox" 1`] = `
<body>
  <div>
    <checkbox
      aria-checked="unknown"
      aria-disabled="false"
      class="flex items-center leading-loose cursor-pointer select-none checkbox "
      role="checkbox"
      tabindex="0"
    >
      <input
        hidden=""
        name="foo"
        type="checkbox"
      />
       
      <icon
        class="checkbox-unknown"
      />
    </checkbox>
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "color" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="color"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "date" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="date"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "date-time" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="datetime-local"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "email" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="email"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "enum" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="hidden"
      value=""
    />
     
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item>
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
      </selected-item>
       
    </input-select>
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "file" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="file"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "integer" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="number"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "month" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="month"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "number" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="number"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "password" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="password"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "radio" 1`] = `
<body>
  <div>
    <radio-group
      class="flex flex-col cursor-pointer select-none "
      id="null"
    >
      <label
        class="flex flex-row items-center gap-2"
      >
        <input
          hidden=""
          name="foo"
          type="radio"
          value="foo"
        />
         
        <icon
          class="radio-off"
        />
         
        <p>
          foo
        </p>
         
      </label>
      <label
        class="flex flex-row items-center gap-2"
      >
        <input
          hidden=""
          name="foo"
          type="radio"
          value="bar"
        />
         
        <icon
          class="radio-off"
        />
         
        <p>
          bar
        </p>
         
      </label>
      <label
        class="flex flex-row items-center gap-2"
      >
        <input
          hidden=""
          name="foo"
          type="radio"
          value="baz"
        />
         
        <icon
          class="radio-off"
        />
         
        <p>
          baz
        </p>
         
      </label>
    </radio-group>
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "range" 1`] = `
<body>
  <div>
    <input-range
      class="relative h-10 grid grid-rows-2 "
    >
      <range-track
        class="relative grid svelte-yaxyzg"
      >
        <span
          class="relative col-start-2 box-border"
        >
          <iframe
            aria-hidden="true"
            src="about:blank"
            style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
            tabindex="-1"
          />
        </span>
         
        <selected
          class="absolute col-start-2"
          style="left: 0px; width: 0px;"
        />
         
         
        <thumb
          aria-valuemax="0"
          aria-valuemin="0"
          class="-top-1 absolute box-border h-4 w-4 cursor-pointer"
          role="slider"
          style="left: 0px;"
          tabindex="0"
        />
      </range-track>
       
      <ticks
        class="svelte-yaxyzg"
        style="--count: 10;"
      >
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            0
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            10
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            20
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            30
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            40
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            50
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            60
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            70
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            80
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            90
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            100
          </p>
        </tick>
      </ticks>
    </input-range>
    
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "range-min-max" 1`] = `
<body>
  <div>
    <input-range
      class="relative h-10 grid grid-rows-2 "
    >
      <range-track
        class="relative grid svelte-yaxyzg"
      >
        <span
          class="relative col-start-2 box-border"
        >
          <iframe
            aria-hidden="true"
            src="about:blank"
            style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
            tabindex="-1"
          />
        </span>
         
        <selected
          class="absolute col-start-2"
          style="left: 0px; width: 0px;"
        />
         
        <thumb
          aria-valuemax="0"
          aria-valuemin="0"
          aria-valuenow="0"
          class="-top-1 absolute box-border h-4 w-4 cursor-pointer"
          role="slider"
          style="left: 0px;"
          tabindex="0"
        />
         
        <thumb
          aria-valuemax="0"
          aria-valuemin="0"
          aria-valuenow="100"
          class="-top-1 absolute box-border h-4 w-4 cursor-pointer"
          role="slider"
          style="left: 0px;"
          tabindex="0"
        />
      </range-track>
       
      <ticks
        class="svelte-yaxyzg"
        style="--count: 10;"
      >
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            0
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            10
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            20
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            30
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            40
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            50
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            60
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            70
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            80
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            90
          </p>
        </tick>
        <tick
          aria-selected="false"
          class="grid grid-cols-2 cursor-pointer select-none"
          role="option"
          tabindex="0"
        >
          <span
            class="col-start-2 h-5px border-l"
          />
           
          <p
            class="col-span-2 flex justify-center"
          >
            100
          </p>
        </tick>
      </ticks>
    </input-range>
    
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "rating" 1`] = `
<body>
  <div>
    <rating
      class="flex cursor-pointer select-none"
      role="radiogroup"
      tabindex="0"
    >
      <input
        hidden=""
        max="10"
        min="0"
        name="foo"
        type="number"
      />
       
      <icon
        aria-checked="false"
        aria-label="Rating 1 out of 10"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 2 out of 10"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 3 out of 10"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 4 out of 10"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 5 out of 10"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 6 out of 10"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 7 out of 10"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 8 out of 10"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 9 out of 10"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
      <icon
        aria-checked="false"
        aria-label="Rating 10 out of 10"
        class="flex flex-shrink-0 items-center justify-center "
        role="option"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="rating-empty"
        />
      </icon>
    </rating>
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "select" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="hidden"
      value=""
    />
     
    <input-select
      class="flex flex-col relative "
      tabindex="0"
    >
      <selected-item
        aria-selected="false"
        class="w-full flex items-center"
        role="option"
        tabindex="-1"
      >
        <item>
           
          
        </item>
         
        <icon
          aria-label="closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </icon>
      </selected-item>
       
    </input-select>
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "string" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="text"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "switch" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="hidden"
      value=""
    />
     
    <toggle-switch
      class="flex items-center "
      role="listbox"
      tabindex="0"
    >
      <item
        aria-selected="false"
        class="relative"
        data-path="0"
        role="option"
      >
         
         
        <p>
          foo
        </p>
        
        
         
      </item>
      <item
        aria-selected="false"
        class="relative"
        data-path="1"
        role="option"
      >
         
         
        <p>
          bar
        </p>
        
        
         
      </item>
      <item
        aria-selected="false"
        class="relative"
        data-path="2"
        role="option"
      >
         
         
        <p>
          baz
        </p>
        
        
         
      </item>
    </toggle-switch>
    
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "tel" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="url"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "text" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="text"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "text-area" 1`] = `
<body>
  <div>
    <textarea
      name="foo"
      type="week"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "time" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="time"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "url" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="url"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render "week" 1`] = `
<body>
  <div>
    <input
      name="foo"
      type="week"
    />
    
    
  </div>
</body>
`;

exports[`Input.svelte > should render different input on type change 1`] = `"<input type=\\"text\\">"`;

exports[`Input.svelte > should render different input on type change 2`] = `"<input type=\\"number\\">"`;
